[package]
name = "ffprog"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.57"
bincode = "2.0.0-rc.1"
clap = { version = "3.2.4", features = ["derive"] }
crossterm = "0.23.2"
flate2 = "1.0.24"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = { version = "1.14.0", default-features = false }
time = "0.3.9"
tui = "0.18.0"

[profile.release]
lto = true
strip = true
