[package]
name = "ffprog"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.64"
bincode = "2.0.0-rc.1"
clap = { version = "3.2.21", features = ["derive"] }
crossterm = "0.25.0"
flate2 = "1.0.24"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_with = { version = "2.0.1", default-features = false }
time = "0.3.14"
tui = "0.19.0"

[profile.release]
lto = true
strip = true
